# lykke.day

./: .gitignore  README.md  check-all.sh  docker-compose.yml  todo.md
backend/: .env.test  DIP_DDD_VIOLATIONS.md  Dockerfile  Dockerfile.worker  Makefile  WEBSOCKET_HANGING_TEST_FIX.md  WEBSOCKET_TEST_FIX_SUMMARY.md  alembic.ini  main.py  openapi.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 005c53e9ce74_add_push_notifications_table.py  08b15d60089e_initial_migration.py  0c2a8b7b3e3d_add_user_status_and_nullable_email.py  1672ca009d1f_add_alarms.py  1f724d18d193_make_calendars_auth_token_id_optional.py  2533290d0732_add_high_level_plan_to_days.py  2699bc117edc_add_attendance_status_to_events.py  29deeb87043a_remove_alarms.py  2f301b2113eb_add_routines_table.py  3199f059616c_get_rid_of_actions.py  31e780d37201_rename_routines_to_routine_definitions.py  3640ee9352a2_rename_goals_to_reminders.py  3865389fa926_initial_migration.py  3c2b6c8c2c7d_add_day_template_times_and_day_bounds.py  3ceb62b762f2_add_time_window_to_routines.py  4888354bcb32_add_calendarentryseries.py  4d7b828b1e1f_add_user_profiles.py  4efc06071515_initial_migration.py  4f090731c713_denormalize_template_onto_day.py  4f63125d861e_denormalize_task_type_and_description.py  5064d5446083_add_calendarentryseries_to_calendarentry.py  5af9d36b31dc_high_level_plan_column.py  670f7a89ff08_add_timeblocks.py  6a8324eaaf9c_fix_duplicate_tables.py  6c49d9a42008_add_usecase_configs_table.py  6f5d7b32258b_add_snoozing.py  6fbd2010f419_add_template_parts_usecases.py  7406d4d6e8fe_remove_conversations.py  75acd5fbf018_remove_tasks_from_day_templates.py  7706cb7b0cd6_add_default_conversation_id_and_sms_.py  7e9a6d1caf5d_add_information_for_push_subscriptions.py  817c19066e98_remove_messages_table.py  828aabadf906_remove_username_column.py  84ab3838ff56_sotre_llm_run_result_on_.py  87e07f882221_add_message_type_and_llm_run_result.py  8a9519606949_initial_migration.py  94fcecdf55ab_user_status_and_optional_email.py  9a0bb64850fb_drop_audit_logs_table.py  9ba773fa0f28_initial_migration.py  9df146a0b39f_add_brain_dump.py  (+30 more)
backend/docker/: init-db.sh
backend/docs/: PUBSUB_CONTEXT_MANAGER.md  PUBSUB_SYSTEM.md  TESTING_GUIDE.md  WEBSOCKET_CHATBOT.md
backend/lykke/: __init__.py  app.py
backend/lykke/application/: base_handler.py  handler_factory_protocols.py  notifications.py  unit_of_work.py  worker_schedule.py
backend/lykke/core/: config.py  constants.py  exceptions.py  observability.py
backend/lykke/domain/: __init__.py
backend/lykke/infrastructure/: __init__.py  repository_factories.py  unit_of_work.py
backend/lykke/presentation/: handler_factory.py  webhook_relay.py
backend/planned/: __init__.py  app.py  config.py  exceptions.py
backend/planned/application/: __init__.py  mediator.py  unit_of_work.py
backend/planned/common/: __init__.py  repository_handler.py  signal_registry.py
backend/planned/core/: __init__.py  config.py  constants.py  events.py  exceptions.py
backend/planned/domain/: __init__.py
backend/planned/gateways/: google.py  web_push.py
backend/planned/infrastructure/: unit_of_work.py
backend/planned/middlewares/: auth.py
backend/planned/objects/: __init__.py  action.py  alarm.py  auth_token.py  base.py  calendar.py  day.py  event.py  message.py  (+6 more)
backend/scripts/: audio.py  backfill_time_block_names.py  check_mappers.py  export_openapi_schema.py  generate_ts_types.py  import_data.py  migrate_data_to_production.py  print_pdf.py  schedule_today.py  send_test_email.py  set_password.py  split_types.py  sync_calendars.py  test.py  webhook_relay_client.py
backend/tests/: conftest.py
(+1774 files in other folders)
